// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database events fetches multiple events with case insensitive words 1`] = `
[
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Lecture (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
]
`;

exports[`Database events fetches multiple events with prefix 1`] = `
[
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 2)",
    "owner": {
      "name": "user",
    },
  },
]
`;
